# p_sizer

./: .gitignore  pyproject.toml
p_sizer/: echart.js  fly.py  header.py  main.py  main_page.py  p_sizer.code-workspace  strategy.py  style.py  svg.py
p_sizer/strategy/: __init__.py  alerts.py  data_analysis.py  econometric_and_cost_optimizations.py  errors.py  fail_safe_mechanisms.py  hedging.py  order_management.py  parameters.py  position_controls.py  position_entry_and_signal.py  position_exit.py  position_management.py  redundancy_backup.py  risk_management.py  saving_and_reusing_settings.py  strategy_metrics.py  strategy_optimization.py  time_frame_management.py  validator.py
