[tool.poetry]
name = "p-sizer"
version = "0.1.0"
description = ""
authors = ["hd <bigestpig@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.1.0"
pandas = "^2.2.2"
finance-datareader = "^0.9.94"
beautifulsoup4 = "^4.12.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

